<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSDN博客</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">添加博客</string>
    <string name="bogger_title">Android博客</string>
    <string name="empty"></string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="blog_title">Cocos2d-x 3.2示例UserDefaultTest（用户默认配置）</string>
    <string name="blog_desc">本篇博客介绍Cocos2d-x 3.2示例中的UserDefaulstTest,我们在开发中可能需要用到一些默认配置，一般会以xml形式保存。Cocos2d-x为我们提供了UserDefault类来实现这样的需求。</string>
    <string name="android_blog">Android博客</string>
    <string name="comment_list">评论</string>
    <string name="blog_detail">博客详情</string>
    <string name="blog_read_times">1</string>
    <string name="blog_create_date">2014-08-08 17:54|141人阅读</string>
    <string name="blog_description">本篇博客介绍Cocos2d-x 3.2示例中的UserDefaulstTest,我们在开发中可能需要用到一些默认配置，一般会以xml形式保存。Cocos2d-x为我们提供了UserDefault类来实现这样的需求。</string>
    <string name="input_blog_id">添加博客ID</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="add_blog_notice">例如：博客地址为“http://blog.csdn.net/abc”，那么“abc”就是您的博客ID。</string>
    <string name="loading">正在加载...</string>
    <string name="toast_message">消息提醒</string>
    <string name="hint_input_blog_id">请输入您要添加的博客ID</string>
    <string name="notice">提示</string>
    <string name="blogger_delete">删除博主</string>
    <string name="blogger_stick">置顶博主</string>
    <string name="cache_operation">取消操作</string>
    <string name="blogger">博客</string>
    <string name="channel">频道</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="change_type">切换频道</string>
    <string name="channel_name">移动开发</string>
    <string name="coming_soon">即将推出，敬请期待</string>
    <string name="refresh_complete">数据已更新</string>
    <string name="rank">排行榜</string>
    <string name="hot_blog">热门文章</string>
    <string name="subscription">订阅</string>
    <string name="blog_expert">博客专家</string>
    <string name="blog_post">博客专栏</string>
    <string name="settings">设置</string>
    <string name="collect">收藏</string>
    <string name="feedback">用户反馈</string>
    <string name="about">关于</string>
    <string name="user_name">东风解冻</string>
    <string name="wechat_name">QQ号：820012865</string>
    <string name="user_center">个人中心</string>
    <string name="commet_date">2013-10-11</string>
    <string name="comment_user_name">username</string>
    <string name="comment_mark">mark</string>
    <string name="comment_replay">回复:</string>
    <string name="comment_username">username</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="update_log">更新日志</string>
    <string name="share_app">分享好友</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出</string>
    <string name="confirm_to_exit">确定要退出吗？</string>
    <string name="setttings_now_version">当前版本V</string>
    <string name="cache_size">0M</string>
    
     <string name="message_image_desc">Message Image</string>
      <string name="action_new_conversation">新建会话</string>
      <string name="contact_us">联系我们</string>

</resources>