<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/include_head_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_settings_check_upgrade"
                style="@style/settings_layout_style" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/check_update" />

                <TextView
                    android:id="@+id/tv_version_name"
                    style="@style/settings_text_style"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:text="@string/setttings_now_version"
                    android:textColor="@color/list_decs_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <View style="@style/settings_divider_style" />

            <LinearLayout
                android:id="@+id/ll_settings_clear_cache"
                style="@style/settings_layout_style" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/clear_cache" />

                <TextView
                    android:id="@+id/tv_cache_size"
                    style="@style/settings_text_style"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:text="@string/cache_size"
                    android:textColor="@color/list_decs_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <View style="@style/settings_divider_style" />

            <LinearLayout
                android:id="@+id/ll_settings_user_feedback"
                style="@style/settings_layout_style" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/feedback" />
            </LinearLayout>

            <View style="@style/settings_divider_style" />

            <LinearLayout
                android:id="@+id/ll_settings_update_log"
                style="@style/settings_layout_style"
                android:visibility="gone" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/update_log" />
            </LinearLayout>

            <View
                style="@style/settings_divider_style"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_settings_share_app"
                style="@style/settings_layout_style" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/share_app" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_settings_contact_us"
                style="@style/settings_layout_style" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/contact_us" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="@color/line" />

            <LinearLayout
                android:id="@+id/ll_settings_exit"
                style="@style/settings_layout_style" >

                <TextView
                    style="@style/settings_text_style"
                    android:text="@string/exit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>