<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <include layout="@layout/include_head_layout" />

    <LinearLayout
        android:id="@+id/ll_find_01"
        style="@style/find_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip" >

        <ImageView
            android:id="@+id/imvChannel"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:contentDescription="@null"
            android:padding="10dip"
            android:src="@drawable/find_01" />

        <TextView
            android:id="@+id/tvChannel"
            style="@style/find_text_style"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/rank" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dip"
            android:contentDescription="@null"
            android:src="@drawable/find_user_point" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_find_02"
            style="@style/find_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:contentDescription="@null"
                android:padding="10dip"
                android:src="@drawable/find_02" />

            <TextView
                style="@style/find_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog_expert" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/ll_find_03"
            style="@style/find_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:contentDescription="@null"
                android:padding="10dip"
                android:src="@drawable/find_03" />

            <TextView
                style="@style/find_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog_post" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_find_04"
            style="@style/find_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:contentDescription="@null"
                android:padding="10dip"
                android:src="@drawable/find_04" />

            <TextView
                style="@style/find_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_blog" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/ll_find_05"
            style="@style/find_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:contentDescription="@null"
                android:padding="10dip"
                android:src="@drawable/find_05" />

            <TextView
                style="@style/find_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>